<resources>

    <string name="app_name">Buck</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_job">Job</string>
    <string name="title_activity_mill">Mill</string>
    <string name="title_activity_measure">Measure</string>
    <string name="title_activity_cut">Cut</string>

    <string-array name="navigation_items">
        <item name="job">Job</item>
        <item name="mill">Mill</item>
    </string-array>

    <string name="about_url">file:///android_asset/html/about.html</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_about">About</string>
    <string name="menu_add">Add</string>
    <string name="menu_done">Done</string>
    <string name="measure_width">Width</string>
    <string name="measure_length">Length</string>
    <string name="measure_clear">Clear</string>
    <string name="measure_add">Add</string>
    <string name="no_data">No Data</string>
    <string name="mill_enabled">Enabled</string>
    <string name="job_inventory">Inventory</string>
    <string name="cutheader_cuts">Cuts</string>
    <string name="cutheader_bf">FBM</string>
    <string name="cutheader_value">Value</string>
    <string name="sumheader_name">Piece</string>
    <string name="sumheader_rate">%</string>
    <string name="sumheader_count">#</string>
    <string name="sumheader_bf">FBM</string>
    <string name="sumheader_value">$</string>
    <string name="price_length">Length Feet:</string>
    <string name="price_rate">Rate %:</string>
    <string name="price_value">Value $/MFBM:</string>
    <string name="price_cancel">Cancel</string>
    <string name="price_save">Save</string>
    <string name="kerf_title">Kerf</string>
    <string name="kerf_desc">\' trim length</string>
    <string name="top_title">Min Top</string>
    <string name="top_desc">\"" minimum default top diameter</string>

</resources>