<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutCutEntry"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textViewSumName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="left"
        android:paddingLeft="2sp"
        android:text="@string/sumheader_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewSumRate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="right"
        android:paddingLeft="2sp"
        android:text="@string/sumheader_rate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewSumCount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="right"
        android:paddingLeft="2sp"
        android:text="@string/sumheader_count"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewSumBf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="right"
        android:paddingLeft="2sp"
        android:text="@string/sumheader_bf"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewSumValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="right"
        android:paddingLeft="2sp"
        android:text="@string/sumheader_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>